bin/tests/snapshots/collapsible_inherits__a5e3316c7f3f4d342d7ac760b33f7bc1_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
}
---
<temp_file_path>>3:3:W:37:[collapsible_inherits] These consecutive `inherit` statements can be merged into one
