bin/tests/snapshots/collapsible_inherits__a5e3316c7f3f4d342d7ac760b33f7bc1_lint_json.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "collapsible_inherits",
      "note": "Consecutive inherit statements are collapsible",
      "code": 37,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 22
            }
          },
          "message": "These consecutive `inherit` statements can be merged into one",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 3
              },
              "to": {
                "line": 3,
                "column": 22
              }
            },
            "fix": "inherit (pkgs) foo bar;"
          }
        }
      ]
    }
  ]
}
