bin/tests/snapshots/collapsible_inherits__a5e3316c7f3f4d342d7ac760b33f7bc1_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit (pkgs) foo;
  inherit (pkgs) bar;
}
---
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit (pkgs) bar;
   │   ─────────┬─────────  
   │            ╰─────────── These consecutive inherit statements can be merged into one
───╯
