bin/tests/snapshots/collapsible_inherits__b0ec00062dac6fd9c085e19a0c5a62fc_fix.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit;
  inherit bar;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,3 @@
 {
-  inherit;
   inherit bar;
 }
