bin/tests/snapshots/collapsible_inherits__b0ec00062dac6fd9c085e19a0c5a62fc_lint_errfmt.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit;
  inherit bar;
}
---
<temp_file_path>>2:3:W:14:[empty_inherit] Remove this empty `inherit` statement
<temp_file_path>>3:3:W:37:[collapsible_inherits] These consecutive `inherit` statements can be merged into one
