bin/tests/snapshots/collapsible_inherits__b0ec00062dac6fd9c085e19a0c5a62fc_lint_json.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit;
  inherit bar;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "empty_inherit",
      "note": "Found empty inherit statement",
      "code": 14,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 2,
              "column": 11
            }
          },
          "message": "Remove this empty `inherit` statement",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 2
              },
              "to": {
                "line": 2,
                "column": 11
              }
            },
            "fix": ""
          }
        }
      ]
    },
    {
      "name": "collapsible_inherits",
      "note": "Consecutive inherit statements are collapsible",
      "code": 37,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 15
            }
          },
          "message": "These consecutive `inherit` statements can be merged into one",
          "suggestion": {
            "at": {
              "from": {
                "line": 2,
                "column": 3
              },
              "to": {
                "line": 3,
                "column": 15
              }
            },
            "fix": "inherit bar;"
          }
        }
      ]
    }
  ]
}
