bin/tests/snapshots/collapsible_inherits__b0ec00062dac6fd9c085e19a0c5a62fc_lint_stderr.snap
---
source: bin/tests/collapsible_inherits.rs
---
{
  inherit;
  inherit bar;
}
---
[empty_inherit] Warning: Found empty inherit statement
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │   inherit;
   │   ────┬───  
   │       ╰───── Remove this empty inherit statement
───╯
[collapsible_inherits] Warning: Consecutive inherit statements are collapsible
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   inherit bar;
   │   ──────┬─────  
   │         ╰─────── These consecutive inherit statements can be merged into one
───╯
